# terraform-django-sample

./: .gitignore  .in  Dockerfile  README.md  pyproject.toml
sampleapp/: manage.py
sampleapp/sampleapp/: asgi.py  urls.py  wsgi.py
sampleapp/sampleapp/settings/: base.py
terraform/: env  main.tf  task-definition.json
